--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "retejo",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "dev": "DEBUG=retejo:* nodemon"
+  "author": {
+    "name": "Cory Driscoll",
+    "email": "cory@drisc.io",
+    "twitter": "@driscio"
   },
   "dependencies": {
-    "async": "^2.6.1",
     "body-parser": "^1.18.3",
-    "cache-manager": "^2.9.0",
-    "cache-manager-fs": "^1.0.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "errorhandler": "^1.5.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "lodash": "^4.17.10",
-    "marked": "^0.4.0",
-    "mongodb": "^3.1.0-beta4",
     "morgan": "~1.9.0",
+    "path": "^0.12.7",
     "pug": "2.0.0-beta11",
     "request": "^2.87.0",
     "stylus": "0.54.5"
   },
-  "devDependencies": {
-    "gulp": "^4.0.0"
+  "scripts": {
+    "start": "node retejo.js",
+    "dev": "DEBUG=retejo:* nodemon"
   }
 }
