--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retejo",
-  "version": "0.0.3",
+  "version": "1.0.0",
   "private": true,
   "author": {
     "name": "Cory Driscoll",
@@ -12,11 +12,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "errorhandler": "^1.5.0",
-    "express": "~4.16.0",
+    "express": "~4.17.1",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
+    "morgan": ">=1.9.1",
     "path": "^0.12.7",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.3",
     "request": "^2.87.0",
     "stylus": "0.54.5",
     "url": "^0.11.0"
