--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "stylus": "0.54.5",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "cors": "2.8.5"
   },
   "scripts": {
     "start": "node retejo.js",
