Revert "Added cors module to allow twtxt"
This reverts commit 1825aef10c636a3e9da9f5a344f36d5cc3b9adc3.

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "pug": "^2.0.3",
     "request": "^2.87.0",
     "stylus": "0.54.5",
-    "url": "^0.11.0",
-    "cors": "2.8.5"
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "node retejo.js",
